src/test/ui/argument-suggestions/complex.stderr
error[E0308]: mismatched types
  --> $DIR/complex.rs:14:11
   |
LL |   complex(1.0, H {}, &"", G{}, F::X2, Z {}, X {}, Y {});
   |           ^^^ expected `u32`, found floating-point number

error[E0308]: mismatched types
  --> $DIR/complex.rs:14:16
   |
LL |   complex(1.0, H {}, &"", G{}, F::X2, Z {}, X {}, Y {});
   |                ^^^^ expected `&str`, found struct `H`

error[E0308]: mismatched types
  --> $DIR/complex.rs:14:22
   |
LL |   complex(1.0, H {}, &"", G{}, F::X2, Z {}, X {}, Y {});
   |                      ^^^ expected enum `E`, found `&&'static str`

error[E0308]: mismatched types
  --> $DIR/complex.rs:14:27
   |
LL |   complex(1.0, H {}, &"", G{}, F::X2, Z {}, X {}, Y {});
   |                           ^^^ expected enum `F`, found struct `G`

error[E0308]: mismatched types
  --> $DIR/complex.rs:14:32
   |
LL |   complex(1.0, H {}, &"", G{}, F::X2, Z {}, X {}, Y {});
   |                                ^^^^^ expected struct `G`, found enum `F`

error[E0308]: mismatched types
  --> $DIR/complex.rs:14:39
   |
LL |   complex(1.0, H {}, &"", G{}, F::X2, Z {}, X {}, Y {});
   |                                       ^^^^ expected struct `X`, found struct `Z`

error[E0308]: mismatched types
  --> $DIR/complex.rs:14:45
   |
LL |   complex(1.0, H {}, &"", G{}, F::X2, Z {}, X {}, Y {});
   |                                             ^^^^ expected struct `Y`, found struct `X`

error[E0308]: mismatched types
  --> $DIR/complex.rs:14:51
   |
LL |   complex(1.0, H {}, &"", G{}, F::X2, Z {}, X {}, Y {});
   |                                                   ^^^^ expected struct `Z`, found struct `Y`

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0308`.
